--- a/views/admin/partials/vendor.twig
+++ b/views/admin/partials/vendor.twig
@@ -14,3 +14,5 @@
 <script src="/admin_assets/vendors/@coreui/coreui-plugin-chartjs-custom-tooltips/js/custom-tooltips.min.js"></script>
 <!-- <script src="/admin_assets/js/main.js"></script> -->
 <script defer src="/admin_assets/vendors/jquery-ui.min.js"></script>
+<script defer src="/admin_assets/vendors/datatables/jquery.dataTables.min.js"></script>
+<script defer src="/admin_assets/vendors/datatables/dataTables.bootstrap4.min.js"></script>
