--- a/views/admin/partials/includes.twig
+++ b/views/admin/partials/includes.twig
@@ -3,6 +3,7 @@
 <link href="/admin_assets/vendors/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
 <link href="/admin_assets/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="/admin_assets/vendors/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+<link href="/admin_assets/vendors/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 <!-- Main styles for this application-->
 <link href="/admin_assets/css/style.css" rel="stylesheet">
 <link href="/admin_assets/vendors/pace-progress/css/pace.min.css" rel="stylesheet">
