added users create

--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -100,7 +100,7 @@
                 </ol>
                 <div class="container-fluid">
                     {% block body %}
-                        {% include "admin\dashboard\index.twig" %}
+                        {% include "admin/dashboard/index.twig" %}
                     {% endblock %}
                 </div>
             </main>
